--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>My first styled page</title>
+  <title>Group 0115 - AI-Human Collaboration</title>
   	<link rel="stylesheet" href="styles/mystyles.css">
   </head>
 
@@ -20,21 +20,19 @@
 </ul>
 
 <!-- Main content -->
-<h1>AI Dominating the Job Market,</h1>
+<h1>AI-Human Collaboration & The Job Market</h1>
 
 
-</ul><p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+<div class="center"></ul><p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
+<p>On the left are columns in which you can click on to view the respective research areas of the topic.</p> </div>
 
 
 <!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021 <br>
-  by Tony Clear.</address>
+<address>June 2023<br>
+ by Group 0115, consisting of Benson & Vincent.</address>
  
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
+<p><em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1</p></em>
+
  
 </body>
 </html>
