--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 </ul>
 
 <!-- Main content -->
-<h1>AI-Human Collaboration & The Job Market</h1>
-
-
+<div class="bordered-text">
+ <h2>AI-Human Collaboration & The Job Marketp</h2>
 <div class="center"></ul><p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
-<p>On the left are columns in which you can click on to view the respective research areas of the topic.</p> </div>
+<p>On the left are columns in which you can click on to view the respective research areas of the topic.</p> </div></div>
 
 
 <!-- Sign and date the page, it's only polite! -->
