--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>Group 0115 - AI-Human Collaboration</title>
-  	<link rel="stylesheet" href="styles/mystyles.css">
-	
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var lastUpdated = new Date(document.lastModified);
-      var lastUpdatedText = lastUpdated.toLocaleString();
-      document.getElementById('last-updated').textContent = lastUpdatedText;
-    });
-  </script>
+  <head>
+    <title>Group 0115 - AI-Human Collaboration</title>
+    <link rel="stylesheet" href="styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
   </head>
-
-<body>
-
-<!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="index.html">Home page</a>
-  <li><a href="misc/topic.html">Technology/Topic</a>
-	<li><a href="misc/opportunities.html">Opportunities</a>
-	<li><a href="misc/risks.html">Risks</a>
-	<li><a href="misc/choices.html">Choices</a>
-	<li><a href="misc/ethics.html">Ethical Reflections</a>
-	<li><a href="misc/references.html">References</a>
-   <li><a href="misc/process.html">Process Support</a>
-</ul>
-
-<!-- Main content -->
-<div class="bordered-text">
-<h2>AI-Human Collaboration & The Job Market</h2>
-<div class="center"></ul><p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
-<p>On the left are columns in which you can click on to view the respective research areas of the topic.</p> </div></div>
-
-
-<!-- Sign and date the page, it's only polite! -->
-<address>June 2023<br>
- by Group 0115, consisting of Benson & Vincent.</address>
- 
-<p><em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1</p></em>
-
-  <footer>
-    <p>Last updated: <span id="last-updated"></span></p>
-  </footer>
-
- 
-</body>
+  <body>
+    <!-- Site navigation menu -->
+    <ul class="navbar">
+      <li>
+        <a href="index.html">Home page</a>
+      <li>
+        <a href="misc/topic.html">Technology/Topic</a>
+      <li>
+        <a href="misc/opportunities.html">Opportunities</a>
+      <li>
+        <a href="misc/risks.html">Risks</a>
+      <li>
+        <a href="misc/choices.html">Choices</a>
+      <li>
+        <a href="misc/ethics.html">Ethical Reflections</a>
+      <li>
+        <a href="misc/references.html">References</a>
+      <li>
+        <a href="misc/process.html">Process Support</a>
+    </ul>
+    <!-- Main content -->
+    <div class="bordered-text">
+      <h2>AI-Human Collaboration & The Job Market</h2>
+      <div class="center">
+        <br>
+        <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
+        <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+      </div>
+    </div>
+    <!-- Sign and date the page, it's only polite! -->
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. </address>
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1
+    </p>
+    </em>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
+  </body>
 </html>
