--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. </address>
     <p>
-      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
     </p>
-    </em>
     <footer>
       <p>Last updated: <span id="last-updated"></span>
       </p>
