--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
       <h1>AI-Human Collaboration & The Job Market</h1>
         <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
         <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+          <!-- Site navigation menu -->
+    <ul class="navbar">
+      <li>
+        <a href="index.html">Home page</a>
+      <li>
+        <a href="misc/topic.html">Technology/Topic</a>
+      <li>
+        <a href="misc/opportunities.html">Opportunities</a>
+      <li>
+        <a href="misc/risks.html">Risks</a>
+      <li>
+        <a href="misc/choices.html">Choices</a>
+      <li>
+        <a href="misc/ethics.html">Ethical Reflections</a>
+      <li>
+        <a href="misc/references.html">References</a>
+      <li>
+        <a href="misc/process.html">Process Support</a>
+    </ul>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. </address>
