--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
       </div>
     <!-- Sign and date the page, it's only polite! -->
-    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. </address>
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
       <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
     </p>
+      </address>
     <footer>
       <p>Last updated: <span id="last-updated"></span>
       </p>
