--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         document.getElementById('last-updated').textContent = lastUpdatedText;
       });
     </script>
-   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Site navigation menu -->
