--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>opportunities</title>
-  	<link rel="stylesheet" href="../styles/mystyles.css">
+  <head>
+    <title>Group 0115 - AI-Human Collaboration</title>
+    <link rel="stylesheet" href="styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
   </head>
-
-<body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
-<!-- Site navigation menu -->
-
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="topic.html">Technology/Topic</a>
-	<li><a href="opportunities.html">Opportunities</a>
-	<li><a href="risks.html">Risks</a>
-	<li><a href="choices.html">Choices</a>
-	<li><a href="ethics.html">Ethical Reflections</a>
-	<li><a href="references.html">References</a>
-   <li><a href="process.html">Process Support</a>
-</ul>
-
-<!-- Main content -->
-<h1>Technology Opportunities</h1>
-
-
-</ul><h4><p>The page or area describing the opportunities presented by your chosen technology/topic.<p></h4>
-
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
- </html>
+  <body>
+    <!-- Site navigation menu -->
+    <ul class="navbar">
+      <li>
+        <a href="index.html">Home page</a>
+      <li>
+        <a href="misc/topic.html">Technology/Topic</a>
+      <li>
+        <a href="misc/opportunities.html">Opportunities</a>
+      <li>
+        <a href="misc/risks.html">Risks</a>
+      <li>
+        <a href="misc/choices.html">Choices</a>
+      <li>
+        <a href="misc/ethics.html">Ethical Reflections</a>
+      <li>
+        <a href="misc/references.html">References</a>
+      <li>
+        <a href="misc/process.html">Process Support</a>
+    </ul>
+    <!-- Main content -->
+    <div class="bordered-text">
+      <h1>AI-Human Collaboration & The Job Market</h1>
+        <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
+        <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+      </div>
+    <!-- Sign and date the page, it's only polite! -->
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
+    </p>
+      </address>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
+  </body>
+</html>
