--- a/misc/topic.html
+++ b/misc/topic.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Group 0115 - AI-Human Collaboration</title>
-    <link rel="stylesheet" href="styles/mystyles.css">
+    <link rel="stylesheet" href="../styles/mystyles.css">
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var lastUpdated = new Date(document.lastModified);
@@ -20,19 +20,19 @@
       <li>
         <a href="index.html">Home page</a>
       <li>
-        <a href="misc/topic.html">Technology/Topic</a>
+        <a href="topic.html">Technology/Topic</a>
       <li>
-        <a href="misc/opportunities.html">Opportunities</a>
+        <a href="opportunities.html">Opportunities</a>
       <li>
-        <a href="misc/risks.html">Risks</a>
+        <a href="risks.html">Risks</a>
       <li>
-        <a href="misc/choices.html">Choices</a>
+        <a href="choices.html">Choices</a>
       <li>
-        <a href="misc/ethics.html">Ethical Reflections</a>
+        <a href="ethics.html">Ethical Reflections</a>
       <li>
-        <a href="misc/references.html">References</a>
+        <a href="references.html">References</a>
       <li>
-        <a href="misc/process.html">Process Support</a>
+        <a href="process.html">Process Support</a>
     </ul>
     <!-- Main content -->
     <div class="bordered-text">
