--- a/misc/topic.html
+++ b/misc/topic.html
@@ -18,7 +18,7 @@
     <!-- Site navigation menu -->
     <ul class="navbar">
       <li>
-        <a href="index.html">Home page</a>
+        <a href="../index.html">Home page</a>
       <li>
         <a href="topic.html">Technology/Topic</a>
       <li>
