--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -40,6 +40,11 @@
         <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
         <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
       </div>
+    <!-- Point: Creates new possibilities through machine learning and natural language processing -->
+    <div class="bordered-text">
+      <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
+      <p>AI, powered by machine learning algorithms and natural language processing capabilities, has the potential to revolutionize various industries by unlocking new possibilities. Machine learning enables AI systems to analyze vast amounts of data, recognize patterns, and make accurate predictions. This opens doors to improved decision-making, personalized user experiences, and advanced automation. Natural language processing allows AI to understand and generate human language, facilitating more natural interactions between humans and machines. With these advancements, AI can drive innovation and transform industries in ways previously unimaginable.</p>
+    </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
