--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -3,6 +3,13 @@
   <head>
     <title>Group 0115 - AI-Human Collaboration</title>
     <link rel="stylesheet" href="styles/mystyles.css">
+    <style>
+      .bordered-text {
+        border: 2px solid black;
+        padding: 10px;
+        margin-bottom: 20px;
+      }
+    </style>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var lastUpdated = new Date(document.lastModified);
@@ -37,9 +44,9 @@
     <!-- Main content -->
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
-        <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
-        <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
-      </div>
+      <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
+      <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+    </div>
     <!-- Point: Creates new possibilities through machine learning and natural language processing -->
     <div class="bordered-text">
       <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
@@ -57,3 +64,4 @@
     </footer>
   </body>
 </html>
+
