--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -52,6 +52,21 @@
       <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
       <p>AI, powered by machine learning algorithms and natural language processing capabilities, has the potential to revolutionize various industries by unlocking new possibilities. Machine learning enables AI systems to analyze vast amounts of data, recognize patterns, and make accurate predictions. This opens doors to improved decision-making, personalized user experiences, and advanced automation. Natural language processing allows AI to understand and generate human language, facilitating more natural interactions between humans and machines. With these advancements, AI can drive innovation and transform industries in ways previously unimaginable.</p>
     </div>
+    <!-- Point: Enhanced productivity -->
+    <div class="bordered-text">
+      <h2>Enhanced Productivity: AI Automating Mundane Tasks and Enabling Human Focus on Complex Work:</h2>
+      <p>One of the key advantages of AI is its ability to automate repetitive and mundane tasks, freeing up valuable time for human workers to focus on more complex and creative aspects of their work. By delegating routine tasks to AI systems, productivity can be significantly enhanced. Humans can then allocate their energy and expertise to higher-level tasks that require critical thinking, problem-solving, and creativity. This collaboration between AI and humans leverages the strengths of both, leading to increased efficiency and better outcomes in various professional domains.</p>
+    </div>
+    <!-- Point: Remote work facilitated by AI technologies -->
+    <div class="bordered-text">
+      <h2>Remote Work Facilitated by AI Technologies:</h2>
+      <p>AI technologies are playing a pivotal role in facilitating remote work and breaking down geographical barriers. With the help of AI-powered tools, remote collaboration has become easier, enabling workers from different locations to connect and collaborate seamlessly. AI can provide virtual environments that simulate real-world settings, allowing remote workers to access and interact with distant environments as if they were physically present. This promotes global collaboration, fosters knowledge sharing, and expands opportunities for individuals to contribute to projects regardless of their geographical location.</p>
+    </div>
+    <!-- Point: Rise of the "gig economy" jobs empowered by AI -->
+    <div class="bordered-text">
+      <h2>Rise of the "Gig Economy" Jobs Empowered by AI:</h2>
+      <p>The emergence of AI-enabled roles is transforming the nature of work, giving rise to the "gig economy" and flexible work options. AI technologies empower individuals to leverage their expertise and skills in versatile ways, adapting to market demands and sustaining independent work arrangements. Through online platforms and marketplaces, AI connects freelancers, consultants, and contractors with opportunities that match their skills and interests. This allows workers to engage in project-based work, take on multiple clients, and have greater control over their professional lives. The flexibility provided by AI in the job market fosters a dynamic ecosystem where individuals can thrive based on their unique capabilities and preferences.</p>
+    </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
