--- a/misc/rubric.html
+++ b/misc/rubric.html
@@ -15,7 +15,9 @@
 <h1>Project Assessment Rubric</h1><br>
 <p>Team name ____________________________________________________</p>
 
-<p><h4>Student name: ......................................., id:...................., Grade: ...............................</p></h4>
+<p><h4>Student name: Benson Wilson , id:...................., Grade: ...............................</p></h4>
+ <p><h4>Student name: Yu pui ming vincent, id: 21150745 , Grade: year 1</p></h4>
+
 <hr/>
 
 
