--- a/misc/rubric.html
+++ b/misc/rubric.html
@@ -16,7 +16,7 @@
 <p>Team name ____________________________________________________</p>
 
 <p><h4>Student name: Benson Wilson , id:...................., Grade: ...............................</p></h4>
- <p><h4>Student name: Yu pui ming vincent, id: 21150745 , Grade: year 1</p></h4>
+ <p><h4>Student name: Yu Pui Ming Vincent, id: 21150745 , Grade: year 1</p></h4>
 
 <hr/>
 
