--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -46,8 +46,7 @@
       <h1>AI-Human Collaboration & The Job Market</h1>
       <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
       <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
-       <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 300px; height: auto; float: right;">
-    </div>
+       <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN">
     <!-- Point: Creates new possibilities through machine learning and natural language processing -->
     <div class="bordered-text">
       <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
