--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -9,6 +9,10 @@
         padding: 10px;
         margin-bottom: 20px;
       }
+      .align-left {
+        float: left;
+        margin-right: 10px;
+      }
     </style>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
@@ -46,8 +50,8 @@
       <h1>AI-Human Collaboration & The Job Market</h1>
       <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
       <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
-       <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 200px; height: auto;">
-
+      <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" class="align-left">
+    </div>
     <!-- Point: Creates new possibilities through machine learning and natural language processing -->
     <div class="bordered-text">
       <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
@@ -67,19 +71,17 @@
     <div class="bordered-text">
       <h2>Rise of the "Gig Economy" Jobs Empowered by AI:</h2>
       <p>The emergence of AI-enabled roles is transforming the nature of work, giving rise to the "gig economy" and flexible work options. AI technologies empower individuals to leverage their expertise and skills in versatile ways, adapting to market demands and sustaining independent work arrangements. Through online platforms and marketplaces, AI connects freelancers, consultants, and contractors with opportunities that match their skills and interests. This allows workers to engage in project-based work, take on multiple clients, and have greater control over their professional lives. The flexibility provided by AI in the job market fosters a dynamic ecosystem where individuals can thrive based on their unique capabilities and preferences.</p>
-   <img src="../images/economia-gig-economy-1024x614 (1).jpg" alt="economia-gig-economy" style="width: 300px; height: auto;">
-
-
+      <img src="../images/economia-gig-economy-1024x614 (1).jpg" alt="economia-gig-economy" style="width: 300px; height: auto;">
     </div>
     <!-- Sign and date the page, it's only polite! -->
-    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
-    <p>
-      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
-    </p>
-      </address>
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent.
+      <p>
+        <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
+      </p>
+    </address>
     <footer>
       <p>Last updated: <span id="last-updated"></span>
       </p>
     </footer>
   </body>
-</html> 
+</html>
