--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -37,8 +37,7 @@
   <!-- Main content -->
   <div class="bordered-text">
     <h1>AI-Human Collaboration & The Job Market</h1>
-    <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
-    <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+    <h2>Opportunities</h2>
     <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 200px; height: auto;">
   </div>
 
