--- a/misc/topic.html
+++ b/misc/topic.html
@@ -37,7 +37,9 @@
     <!-- Main content -->
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
-      <h2>Opportunities</h2>
+      <h2>Technology/Topic</h2>
+      <p>Artificial Intelligence is already a hot topic. It seems like in the last few years we've had a sudden boom of AI tools gifted to us. The current "big trend" for AI is to product results in response to our inputs, think for example ChatGPT or Midjourney.</p>
+      <p>.How many times have you opened up a support service chat, and it's very first prompt is to direct you to its services chatbot to help you? It's a lot more than you think. AI-Human collaboration is already happening, any company can apply AI-Human collaboration in its different areas and already have a competitive advantage over those who do not apply such practices. </p>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
