--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -38,7 +38,7 @@
   <div class="bordered-text">
     <h1>AI-Human Collaboration & The Job Market</h1>
     <h2>Opportunities</h2>
-    <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 200px; height: auto;">
+ 
   </div>
 
   <!-- Point: Creates new possibilities through machine learning and natural language processing -->
@@ -65,6 +65,9 @@
     <p>The emergence of AI-enabled roles is transforming the nature of work, giving rise to the "gig economy" and flexible work options. AI technologies empower individuals to leverage their expertise and skills in versatile ways, adapting to market demands and sustaining independent work arrangements. Through online platforms and marketplaces, AI connects freelancers, consultants, and contractors with opportunities that match their skills and interests. This allows workers to engage in project-based work, take on multiple clients, and have greater control over their professional lives. The flexibility provided by AI in the job market fosters a dynamic ecosystem where individuals can thrive based on their unique capabilities and preferences.</p>
     <img src="../images/economia-gig-economy-1024x614 (1).jpg" alt="economia-gig-economy" style="width: 300px; height: auto;">
   </div>
+  
+  <div style="text-align: right;"><img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 500px; height: auto;"/></div>
+  
 
   <!-- Sign and date the page, it's only polite! -->
   <address>
