--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -3,20 +3,8 @@
 <head>
   <title>Group 0115 - AI-Human Collaboration</title>
   <link rel="stylesheet" href="../styles/mystyles.css">
-  <style>
-    .bordered-text {
-      border: 2px solid black;
-      padding: 10px;
-      margin-bottom: 20px;
-    }
-  </style>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var lastUpdated = new Date(document.lastModified);
-      var lastUpdatedText = lastUpdated.toLocaleString();
-      document.getElementById('last-updated').textContent = lastUpdatedText;
-    });
-  </script>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
@@ -35,22 +23,30 @@
   </ul>
 
   <!-- Main content -->
-  <div class="bordered-text">
-    <h1>AI-Human Collaboration & The Job Market</h1>
-    <h2>Opportunities</h2>
- 
-  </div>
+  <div class="container">
+    <div class="content">
+      <div class="bordered-text">
+        <h1>AI-Human Collaboration & The Job Market</h1>
+        <h2>Opportunities</h2>
+      </div>
 
-  <!-- Point: Creates new possibilities through machine learning and natural language processing -->
-  <div class="bordered-text">
-    <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
-    <p>AI, powered by machine learning algorithms and natural language processing capabilities, has the potential to revolutionize various industries by unlocking new possibilities. Machine learning enables AI systems to analyze vast amounts of data, recognize patterns, and make accurate predictions. This opens doors to improved decision-making, personalized user experiences, and advanced automation. Natural language processing allows AI to understand and generate human language, facilitating more natural interactions between humans and machines. With these advancements, AI can drive innovation and transform industries in ways previously unimaginable.</p>
-  </div>
+      <!-- Point: Creates new possibilities through machine learning and natural language processing -->
+      <div class="bordered-text">
+        <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
+        <p>AI, powered by machine learning algorithms and natural language processing capabilities, has the potential to revolutionize various industries by unlocking new possibilities. Machine learning enables AI systems to analyze vast amounts of data, recognize patterns, and make accurate predictions. This opens doors to improved decision-making, personalized user experiences, and advanced automation. Natural language processing allows AI to understand and generate human language, facilitating more natural interactions between humans and machines. With these advancements, AI can drive innovation and transform industries in ways previously unimaginable.</p>
+      </div>
 
-  <!-- Point: Enhanced productivity -->
-  <div class="bordered-text">
-    <h2>Enhanced Productivity: AI Automating Mundane Tasks and Enabling Human Focus on Complex Work:</h2>
-    <p>One of the key advantages of AI is its ability to automate repetitive and mundane tasks, freeing up valuable time for human workers to focus on more complex and creative aspects of their work. By delegating routine tasks to AI systems, productivity can be significantly enhanced. Humans can then allocate their energy and expertise to higher-level tasks that require critical thinking, problem-solving, and creativity. This collaboration between AI and humans leverages the strengths of both, leading to increased efficiency and better outcomes in various professional domains.</p>
+      <!-- Point: Enhanced productivity -->
+      <div class="bordered-text">
+        <h2>Enhanced Productivity: AI Automating Mundane Tasks and Enabling Human Focus on Complex Work:</h2>
+        <p>One of the key advantages of AI is its ability to automate repetitive and mundane tasks, freeing up valuable time for human workers to focus on more complex and creative aspects of their work. By delegating routine tasks to AI systems, productivity can be significantly enhanced. Humans can then allocate their energy and expertise to higher-level tasks that require critical thinking, problem-solving, and creativity. This collaboration between AI and humans leverages the strengths of both, leading to increased efficiency and better outcomes in various professional domains.</p>
+      </div>
+    </div>
+
+    <!-- Image -->
+    <div class="image">
+      <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN">
+    </div>
   </div>
 
   <!-- Point: Remote work facilitated by AI technologies -->
@@ -63,11 +59,8 @@
   <div class="bordered-text">
     <h2>Rise of the "Gig Economy" Jobs Empowered by AI:</h2>
     <p>The emergence of AI-enabled roles is transforming the nature of work, giving rise to the "gig economy" and flexible work options. AI technologies empower individuals to leverage their expertise and skills in versatile ways, adapting to market demands and sustaining independent work arrangements. Through online platforms and marketplaces, AI connects freelancers, consultants, and contractors with opportunities that match their skills and interests. This allows workers to engage in project-based work, take on multiple clients, and have greater control over their professional lives. The flexibility provided by AI in the job market fosters a dynamic ecosystem where individuals can thrive based on their unique capabilities and preferences.</p>
-    <img src="../images/economia-gig-economy-1024x614 (1).jpg" alt="economia-gig-economy" style="width: 300px; height: auto;">
+    <img src="../images/economia-gig-economy-1024x614 (1).jpg" alt="economia-gig-economy">
   </div>
-  
-  <div style="text-align: right;"><img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 500px; height: auto;"/></div>
-  
 
   <!-- Sign and date the page, it's only polite! -->
   <address>
