--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -45,7 +45,7 @@
 
     <!-- Image -->
     <div class="image">
-      <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN">
+      <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 300px; height: auto;">
     </div>
   </div>
 
