--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -33,7 +33,7 @@
     <div class="content">
       <div class="bordered-text">
         <h1>AI-Human Collaboration & The Job Market</h1>
-        <h2>Opportunities</h2>
+        <h2><u>Opportunities</u></h2>
       </div>
 
       <!-- Point: Creates new possibilities through machine learning and natural language processing -->
