--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -52,6 +52,7 @@
     <!-- Image -->
     <div class="image">
       <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 500px; height: auto;">
+      <p>test text test text</p>
     </div>
   </div>
 
