--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -52,7 +52,7 @@
     <!-- Image -->
     <div class="image">
       <img src="../images/R1804J_WILSON_COLLABORATION.png" alt="AI-HUMAN" style="width: 500px; height: auto;">
-      <p>test text test text</p>
+      <p><i>A survey of 1,075 companies in 12 industries found that the more of AI-Human collaboration principles companies adopted, the better their AI initiatives performed in terms of speed, cost savings, revenues, or other operational measures.</i></p>
     </div>
   </div>
 
