--- a/misc/risks.html
+++ b/misc/risks.html
@@ -37,8 +37,13 @@
     <!-- Main content -->
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
-        <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
-        <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+      <h2>Risks</h2>
+        <ul>
+          <li>AI making jobs obsolete</li><br>
+          <li>A loss of human independency or creativity</li><br>
+          <li>Massive lay-offs to compensate for AI in the workplac</li><br>
+          <li>General workforce safety</li>
+      </ul>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
