--- a/misc/risks.html
+++ b/misc/risks.html
@@ -37,7 +37,7 @@
     <!-- Main content -->
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
-      <h2>Risks</h2>
+      <h2>Risks:</h2>
         <ul>
           <li>AI making jobs obsolete</li><br>
           <li>A loss of human independency or creativity</li><br>
