--- a/misc/risks.html
+++ b/misc/risks.html
@@ -38,12 +38,12 @@
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
       <h2>Risks:</h2>
-        <ul>
-          <li>AI making jobs obsolete</li><br>
-          <li>A loss of human independency or creativity</li><br>
-          <li>Massive lay-offs to compensate for AI in the workplac</li><br>
-          <li>General workforce safety</li>
-      </ul>
+  <ul>
+    <li>AI making jobs obsolete</li>
+    <li>A loss of human independency or creativity</li>
+    <li>Massive lay-offs to compensate for AI in the workplace</li>
+    <li>General workforce safety</li>
+  </ul>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
