--- a/misc/risks.html
+++ b/misc/risks.html
@@ -13,6 +13,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    
+    <style>
+ul {
+  padding-left: 0;
+}
+
+ul li {
+  list-style-type: none;
+  text-align: left;
+}
+
+ul li:before {
+  content: "\2022";
+  margin-right: 0.5em;
+}
+      
+    </style>
   </head>
   <body>
     <!-- Site navigation menu -->
