--- a/misc/risks.html
+++ b/misc/risks.html
@@ -16,13 +16,13 @@
     
     <style>
 .bordered-text ul {
-  text-align: center;
+  display: inline-block;
+  text-align: left;
   padding-left: 0;
 }
 
 .bordered-text li {
   list-style-type: none;
-  text-align: left;
 }
 
 .bordered-text li:before {
@@ -37,7 +37,6 @@
   clear: both;
 }
 
-}
       
     </style>
   </head>
