--- a/misc/risks.html
+++ b/misc/risks.html
@@ -71,6 +71,12 @@
     <li>Massive lay-offs to compensate for AI in the workplace</li>
     <li>General workforce safety</li>
   </ul>
+      <p> It can be a somewhat daunting to imagine a dystopian world where AI has replaced most jobs, and have hindered the job market, making jobs obsolete to the average person. Let me be clear that this is a perfectly normal reaction to have. 
+        However, this is not the case. Yes, some jobs will become obsolete, but new jobs will be created as a result of AI. What we do know for certain is that companies whose main goal is to deploy AI to automate processes in order to mainly 
+        replace employees will only see short-term productivity gains. This conclusion was obtained by said research relating to the graph that involved 1500 companies, they found that <i>"firms achieve the most significant performance improvements 
+        when humans and machines work together. Through such collaborative intelligence, humans and AI actively enhance each other’s complementary strengths: the leadership, teamwork, creativity, and social skills of the former, and the speed, scalability, and so on".</i> </p>
+
+Why is this? It's because collaboration is essential, and one cannot succeed without the other. Humans can do as they please, while machines need an input and an output.  
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
